[project]
name = "pysqltoolkit"
version = "1.0.0"
description = "PySQL is a toolkit built primarily for the assistance with constructing RDBMS Apps"
authors = [
    {name = "Thomas Barreto"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
